# Zhiva-native

./: .gitignore  CMakeLists.txt  Makefile  README.md  dark_stub.go  go.mod  go.sum  main.cpp  main.go  suglite.json  win_dark.go
.github/workflows/: native-release.yml
src/: app_context.h  bindings.cpp  bindings.h  init_script.cpp  init_script.h  launch_options.cpp  launch_options.h  main.cpp  platform_window.cpp  platform_window.h  zhiva_scheme.cpp  zhiva_scheme.h
